--- a/run/config/splash.properties
+++ b/run/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Sat Oct 27 23:02:33 BST 2018
+#Mon Oct 29 17:38:33 GMT 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
